--- a/main.html
+++ b/main.html
@@ -23,6 +23,16 @@
                 </li>
             </ul>
         </nav>
+        <div>
         <img src="assets/main.jpg" name="home" style="width:100%">
+        <div id="center">
+            <p class="first">
+                    كورال افا بافلي
+            </p>
+            <p class=" second">
+                امتداد 15 مايو
+            </p>
+        </div>
+        </div>
     </body>
 </html>
