fix responsive positions

--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
                 </li>
             </ul>
         </nav>
-        <div>
+        <div class="container">
         <img src="assets/main.jpg" name="home" style="width:100%">
         <div id="center">
             <p class="first">
