navbar scroll background color

--- a/main.html
+++ b/main.html
@@ -2,22 +2,23 @@
 <html>
     <head>
         <link rel="stylesheet" href="main.css">
+        <script src="main.js"></script>
     </head>
-    <body>
-        <nav>
+    <body onscroll="animate()">
+        <nav id="nav">
             <ul>
                 <li>
-                    <a href="#events">
+                    <a id="nav-elements1" href="#events">
                     مناسبات
                     </a>
                 </li>
                 <li>
-                    <a href="#about">
+                    <a id="nav-elements2" href="#about">
                     عن الكورال
                     </a> 
                 </li>
                 <li>
-                    <a href="#home">
+                    <a id="nav-elements3" href="#home">
                          الرئيسيه
                     </a>
                 </li>
@@ -34,5 +35,8 @@
             </p>
         </div>
         </div>
+        <section style="margin-top:300px;">
+            7madaaaaaaaa
+        </section>
     </body>
 </html>
