first section template

--- a/main.html
+++ b/main.html
@@ -3,8 +3,11 @@
     <head>
         <link rel="stylesheet" href="main.css">
         <script src="main.js"></script>
+        <title>
+            coral
+        </title>
     </head>
-    <body onscroll="animate()">
+    <body onscroll="scrolling()">
         <nav id="nav">
             <ul>
                 <li>
@@ -35,8 +38,26 @@
             </p>
         </div>
         </div>
-        <section style="margin-top:300px;">
-            7madaaaaaaaa
+        <div style="width:70%;margin-left: 15%">
+        
+        <section name="about">
+            <h2>عن الكورال</h2>
+            <article >
+                <div style="height: 100%;margin-top:14px;">
+                <h2 style="color:black;">
+                                Hi There
+                </h2>
+                <span>
+                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+
+                        A small river named Duden flows by their place and sisematic country, in which roasted parts of sentences fly into your mouth.
+                </span>
+                </div>
+            </article>
+            <figure >
+                <img src="assets/team.jpg" >
+            </figure>
         </section>
+    </div>
     </body>
 </html>
