--- a/main.html
+++ b/main.html
@@ -40,21 +40,21 @@
         </div>
         <div style="width:70%;margin-left: 15%">
         
-        <section name="about">
+        <section id="about">
             <h2>عن الكورال</h2>
-            <article >
+            <article id="arti1" class="hide" >
                 <div style="height: 100%;margin-top:14px;">
-                <h2 style="color:black;">
+                <h3>
                                 Hi There
-                </h2>
+                </h3>
                 <span>
                         Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
 
-                        A small river named Duden flows by their place and sisematic country, in which roasted parts of sentences fly into your mouth.
+                        A small river named by their place and sisematic country, in which roasted parts of sentences fly into your mouth.
                 </span>
                 </div>
             </article>
-            <figure >
+            <figure id="fig1" class=" hide">
                 <img src="assets/team.jpg" >
             </figure>
         </section>
