--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div class="container">
-        <img src="assets/main.jpg" name="home" style="width:100%">
+        <img src="assets/main.jpg" id="home" style="width:100%">
         <div id="center">
             <p class="first">
                     كورال افا بافلي
@@ -42,10 +42,10 @@
         
         <section id="about">
             <h2>عن الكورال</h2>
-            <article id="arti1" class="hide" >
-                <div style="height: 100%;margin-top:14px;">
+            <article id="arti1" class="hide">
+                <div style="height:100%;margin-top:14px;">
                 <h3>
-                                Hi There
+                        Hi There
                 </h3>
                 <span>
                         Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
@@ -56,6 +56,23 @@
             </article>
             <figure id="fig1" class=" hide">
                 <img src="assets/team.jpg" >
+            </figure>
+        </section>
+        <section id="maps" style="margin-top:100px;">
+            <article width="30%">
+                    <h3>
+                            Hi There
+                    </h3>
+                    <span>
+                            Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+    
+                            A small river named by their place and sisematic country, in which roasted parts of sentences fly into your mouth.
+                    </span>
+            </article>
+            <figure>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d720.4237595528513!2d31.371046230559312!3d29.8618981750618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2seg!4v1560262781115!5m2!1sen!2seg" 
+                width="100%" height="300" frameborder="0" style="border:0" allowfullscreen>
+                </iframe>
             </figure>
         </section>
     </div>
