--- a/main.html
+++ b/main.html
@@ -16,12 +16,17 @@
                     </a>
                 </li>
                 <li>
-                    <a id="nav-elements2" href="#about">
+                        <a id="nav-elements2" href="#maps">
+                            الخريطه
+                        </a> 
+                    </li>
+                <li>
+                    <a id="nav-elements3" href="#about">
                     عن الكورال
                     </a> 
                 </li>
                 <li>
-                    <a id="nav-elements3" href="#home">
+                    <a id="nav-elements4" href="#home">
                          الرئيسيه
                     </a>
                 </li>
@@ -58,8 +63,9 @@
                 <img src="assets/team.jpg" >
             </figure>
         </section>
-        <section id="maps" style="margin-top:100px;">
-            <article width="30%">
+        <section id="maps" style="margin-top:60px;">
+                <h2>الخريطه</h2>
+            <article width="30%" class="hide" id="arti2">
                     <h3>
                             Hi There
                     </h3>
@@ -69,12 +75,17 @@
                             A small river named by their place and sisematic country, in which roasted parts of sentences fly into your mouth.
                     </span>
             </article>
-            <figure>
+            <figure class="hide" id="fig2">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d720.4237595528513!2d31.371046230559312!3d29.8618981750618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2seg!4v1560262781115!5m2!1sen!2seg" 
                 width="100%" height="300" frameborder="0" style="border:0" allowfullscreen>
                 </iframe>
             </figure>
         </section>
+    </div>
+    <div id="socialMedia">
+        <div id="fb">
+            
+        </div>
     </div>
     </body>
 </html>
