--- a/main.html
+++ b/main.html
@@ -60,7 +60,7 @@
                 </div>
                 </article>
                 <figure id="fig1" class=" hide">
-                    <img src="assets/team.jpg" >
+                    <img src="assets/car0.jpg" >
                 </figure>
             </section>
             <section id="maps" style="margin-top:60px;">
@@ -92,17 +92,17 @@
         </div>
         <div class="grid">
             <section id="carousal-section">
-                <span class="arr">&#8592;</span>
-                <figure class="carousal">
-                    <img src="assets/team.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
+                <span class="arr" onclick="carousal(-1)">&#8592;</span>
+                <figure class="carousal" >
+                    <img id="car0" src="assets/car0.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
                 </figure>
                 <figure class="carousal">
-                    <img src="assets/team.jpg" style="width:300px;height: 200px;" class="carousal-imgs">
+                    <img id="car1" src="assets/car1.jpg" style="width:300px;height: 200px;" class="carousal-imgs">
                 </figure>
-                <figure class="carousal">
-                    <img src="assets/team.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
+                <figure class="carousal ">
+                    <img id="car2" src="assets/car2.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
                 </figure>
-                <span class="arr">&rarr;</span>
+                <span class="arr" onclick="carousal(1)">&rarr;</span>
             </section>
         </div>
     </body>
