--- a/main.html
+++ b/main.html
@@ -93,14 +93,17 @@
         <div class="grid">
             <section id="carousal-section">
                 <span class="arr" onclick="carousal(-1)">&#8592;</span>
-                <figure class="carousal" >
+                <figure class="carousal container" >
                     <img id="car0" src="assets/car0.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
+                    <p id="des0" class="carousal-par"> حفله &nbsp; 2 </p>
                 </figure>
-                <figure class="carousal">
+                <figure class="carousal container">
                     <img id="car1" src="assets/car1.jpg" style="width:300px;height: 200px;" class="carousal-imgs">
+                    <p id="des1" class="carousal-par"> حفله&nbsp; 1 </p>
                 </figure>
-                <figure class="carousal ">
+                <figure class="carousal container">
                     <img id="car2" src="assets/car2.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
+                    <p id="des2" class="carousal-par">حفله&nbsp; 0 </p>
                 </figure>
                 <span class="arr" onclick="carousal(1)">&rarr;</span>
             </section>
