--- a/main.html
+++ b/main.html
@@ -91,7 +91,9 @@
             </div>
         </div>
         <div class="grid">
+                <h2 style="margin-bottom:-60px;margin-top:150px;">مناسبات</h2>
             <section id="carousal-section">
+                
                 <span class="arr" onclick="carousal(-1)">&#8592;</span>
                 <figure class="carousal container" >
                     <img id="car0" src="assets/car0.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
