--- a/main.html
+++ b/main.html
@@ -93,8 +93,9 @@
         <div class="grid">
                 <h2 style="margin-bottom:-60px;margin-top:150px;">مناسبات</h2>
             <section id="carousal-section">
-                
-                <span class="arr" onclick="carousal(-1)">&#8592;</span>
+                <div style="display:table-cell;vertical-align: middle;">
+                <span id="arr0" class="arr" onclick="carousal(-1)">&#8592;</span>
+                </div>
                 <figure class="carousal container" >
                     <img id="car0" src="assets/car0.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
                     <p id="des0" class="carousal-par"> حفله &nbsp; 2 </p>
@@ -107,7 +108,9 @@
                     <img id="car2" src="assets/car2.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
                     <p id="des2" class="carousal-par">حفله&nbsp; 0 </p>
                 </figure>
-                <span class="arr" onclick="carousal(1)">&rarr;</span>
+                <div style="display:table-cell;vertical-align: middle;">
+                <span id="arr2" class="arr" onclick="carousal(1)">&rarr;</span>
+                </div>
             </section>
         </div>
     </body>
