--- a/main.html
+++ b/main.html
@@ -94,24 +94,28 @@
                 <h2 style="margin-bottom:-60px;margin-top:150px;">مناسبات</h2>
             <section id="carousal-section">
                 <div style="display:table-cell;vertical-align: middle;">
-                <span id="arr0" class="arr" onclick="carousal(-1)">&#8592;</span>
+                <span id="arr0" class="arr" onclick="carousal(1)">&#8592;</span>
                 </div>
                 <figure class="carousal container" >
-                    <img id="car0" src="assets/car0.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
+                    <img id="car0" onclick="openModal(this);carousal(1);" src="assets/car0.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
                     <p id="des0" class="carousal-par"> حفله &nbsp; 2 </p>
                 </figure>
                 <figure class="carousal container">
-                    <img id="car1" src="assets/car1.jpg" style="width:300px;height: 200px;" class="carousal-imgs">
+                    <img id="car1" onclick="openModal(this)" src="assets/car1.jpg" style="width:300px;height: 200px;" class="carousal-imgs">
                     <p id="des1" class="carousal-par"> حفله&nbsp; 1 </p>
                 </figure>
                 <figure class="carousal container">
-                    <img id="car2" src="assets/car2.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
+                    <img id="car2" onclick="openModal(this);carousal(-1);" src="assets/car2.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
                     <p id="des2" class="carousal-par">حفله&nbsp; 0 </p>
                 </figure>
                 <div style="display:table-cell;vertical-align: middle;">
-                <span id="arr2" class="arr" onclick="carousal(1)">&rarr;</span>
+                <span id="arr2" class="arr" onclick="carousal(-1)">&rarr;</span>
                 </div>
             </section>
+        </div>
+
+        <!--modal -->
+        <div id="modal" class="modal" onclick="closeModal()">
         </div>
     </body>
 </html>
