modal include paragraph

--- a/main.html
+++ b/main.html
@@ -96,16 +96,16 @@
                 <div style="display:table-cell;vertical-align: middle;">
                 <span id="arr0" class="arr" onclick="carousal(1)">&#8592;</span>
                 </div>
-                <figure class="carousal container" >
-                    <img id="car0" onclick="openModal(this);carousal(1);" src="assets/car0.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
+                <figure class="carousal container" onclick="openModal(this);carousal(1);">
+                    <img id="car0"  src="assets/car0.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
                     <p id="des0" class="carousal-par"> حفله &nbsp; 2 </p>
                 </figure>
-                <figure class="carousal container">
-                    <img id="car1" onclick="openModal(this)" src="assets/car1.jpg" style="width:300px;height: 200px;" class="carousal-imgs">
+                <figure class="carousal container" onclick="openModal(this)">
+                    <img id="car1"  src="assets/car1.jpg" style="width:300px;height: 200px;" class="carousal-imgs">
                     <p id="des1" class="carousal-par"> حفله&nbsp; 1 </p>
                 </figure>
-                <figure class="carousal container">
-                    <img id="car2" onclick="openModal(this);carousal(-1);" src="assets/car2.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
+                <figure class="carousal container" onclick="openModal(this);carousal(-1);">
+                    <img id="car2"  src="assets/car2.jpg" style="width:220px;height: 160px;" class="carousal-imgs">
                     <p id="des2" class="carousal-par">حفله&nbsp; 0 </p>
                 </figure>
                 <div style="display:table-cell;vertical-align: middle;">
