carousal hide effect

--- a/main.html
+++ b/main.html
@@ -92,7 +92,7 @@
         </div>
         <div class="grid">
                 <h2 style="margin-bottom:-60px;margin-top:150px;">مناسبات</h2>
-            <section id="carousal-section">
+            <section id="carousal-section" class="hide">
                 <div style="display:table-cell;vertical-align: middle;">
                 <span id="arr0" class="arr" onclick="carousal(1)">&#8592;</span>
                 </div>
