handle modal buffer

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
             coral
         </title>
     </head>
-    <body onscroll="scrolling()">
+    <body onscroll="scrolling()" onkeypress="myKeyPress(event)">
         <nav id="nav">
             <ul>
                 <li>
