script loaded after html

--- a/main.html
+++ b/main.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="main.css" type="text/css">
-        <script src="main.js"></script>
         <title>
             coral
         </title>
@@ -112,10 +111,16 @@
                 <span id="arr2" class="arr" onclick="carousal(-1)">&rarr;</span>
                 </div>
             </section>
+            <section >
+                <table id="table" style="widows: 100%;">
+                   
+                </table>
+            </section>
         </div>
 
         <!--modal -->
         <div id="modal" class="modal" onclick="closeModal()">
         </div>
+        <script src="main.js"></script>
     </body>
 </html>
