calender basic template

--- a/main.html
+++ b/main.html
@@ -111,7 +111,7 @@
                 <span id="arr2" class="arr" onclick="carousal(-1)">&rarr;</span>
                 </div>
             </section>
-            <section >
+            <section style="margin-top:60px;text-align: center">
                 <table id="table" style="widows: 100%;">
                    
                 </table>
