--- a/main.html
+++ b/main.html
@@ -112,6 +112,9 @@
                 </div>
             </section>
             <section style="margin-top:60px;text-align: center">
+                <h2>
+                    مواعيد الشهر
+                </h2>
                 <table id="table" style="widows: 100%;">
                    
                 </table>
