event details added

--- a/main.html
+++ b/main.html
@@ -111,13 +111,18 @@
                 <span id="arr0" class="arr" onclick="carousal(-1)">&rarr;</span>
                 </div>
             </section>
-            <section id="3d" style="margin-top:60px;text-align: center;transform-style: preserve-3d;backface-visibility: hidden;">
-                <h2>
-                    مواعيد الشهر
-                </h2>
-                <table id="table" style="widows: 100%;">
-                    <div id="details">
-                        
+            <section id="3d" style="margin-top:60px;text-align: center;transform-style: preserve-3d;">
+                <table id="table">
+                        <h2>
+                                مواعيد الشهر
+                            </h2>
+                    <div id="details" >
+                        <span onclick="rotateTable(360)" style="position: absolute;left:96%;font-size: 30px;cursor: pointer;">&times;</span>
+                        <div style="position: absolute;top: 30%;left:20%; transform:translateZ(300px);">
+                            <h1 >نهضه</h1>
+                            <h3 style="color: white;">كنيسة مارجرجس بحلوان</h3>
+                            <p>من الساعه 7:00 الي 8:00</p>
+                        </div>
                     </div>
                 </table>
             </section>
