translate z for table elements

--- a/main.html
+++ b/main.html
@@ -118,7 +118,7 @@
                             </h2>
                     <div id="details" >
                         <span onclick="rotateTable(360)" style="position: absolute;left:96%;font-size: 30px;cursor: pointer;">&times;</span>
-                        <div style="position: absolute;top: 30%;left:20%; transform:translateZ(300px);">
+                        <div style="position: absolute;top: 30%;left:20%;">
                             <h1 >نهضه</h1>
                             <h3 style="color: white;">كنيسة مارجرجس بحلوان</h3>
                             <p>من الساعه 7:00 الي 8:00</p>
