--- a/main.html
+++ b/main.html
@@ -10,23 +10,28 @@
     <body onscroll="scrolling()" >
         <nav id="nav">
             <ul>
+                    <li>
+                        <a id="nav-elements1" href="#events">
+                            مواعيد
+                        </a>
+                    </li>
                 <li>
-                    <a id="nav-elements1" href="#events">
+                    <a id="nav-elements2" href="#events">
                     مناسبات
                     </a>
                 </li>
                 <li>
-                        <a id="nav-elements2" href="#maps">
+                        <a id="nav-elements3" href="#maps">
                             الخريطه
                         </a> 
                     </li>
                 <li>
-                    <a id="nav-elements3" href="#about">
+                    <a id="nav-elements4" href="#about">
                     عن الكورال
                     </a> 
                 </li>
                 <li>
-                    <a id="nav-elements4" href="#home">
+                    <a id="nav-elements5" href="#home">
                          الرئيسيه
                     </a>
                 </li>
