--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
         <nav id="nav">
             <ul>
                     <li>
-                        <a id="nav-elements1" href="#events">
+                        <a id="nav-elements1" href="#3d">
                             مواعيد
                         </a>
                     </li>
                 <li>
-                    <a id="nav-elements2" href="#events">
+                    <a id="nav-elements2" href="#socialMedia">
                     مناسبات
                     </a>
                 </li>
@@ -43,13 +43,13 @@
             <p class="first">
                     كورال افا بافلي
             </p>
-            <p class=" second">
+            <p class=" second" id="about">
                 امتداد 15 مايو
             </p>
         </div>
         </div>
         <div class="grid" >
-            <section id="about">
+            <section>
                 <h2>عن الكورال</h2>
                 <article id="arti1" class="hide">
                 <div style="height:100%;margin-top:14px;">
@@ -67,8 +67,8 @@
                     <img src="assets/car0.jpg" >
                 </figure>
             </section>
-            <section id="maps" style="margin-top:60px;">
-                <h2>الخريطه</h2>
+            <section id="maps">
+                <h2 style="padding-top:60px;">الخريطه</h2>
                 <article width="30%" class="hide" id="arti2">
                     <h3>
                         Hi There
