finished hide animations

--- a/main.html
+++ b/main.html
@@ -116,7 +116,7 @@
                 <span id="arr0" class="arr" onclick="carousal(-1)">&rarr;</span>
                 </div>
             </section>
-            <section id="3d" style="margin-top:60px;text-align: center;transform-style: preserve-3d;">
+            <section id="3d" style="text-align: center;transform-style: preserve-3d;" class="hide2">
                 <table id="table">
                         <h2>
                                 مواعيد الشهر
