avoid overflow-x errors

--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
             coral
         </title>
     </head>
-    <body onscroll="scrolling()" >
+    <body onscroll="scrolling()" style="overflow-x:hidden;">
         <nav id="nav">
             <ul>
                     <li>
