--- a/main.html
+++ b/main.html
@@ -131,6 +131,43 @@
                     </div>
                 </table>
             </section>
+            <footer style="text-align: center;margin-top:-151px">
+                Like what you see ? &#128521;
+                <br>
+                Then give us a call and we can chat through what you need.
+                <br>
+                +2001207418881
+                <br>
+                <a href="mailto:philopateernabil2021@gmail.com" style="color:black;text-decoration: none;">
+                    philopateernabil2021@gmail.com
+                </a>
+                <br>
+                <div style="display: inline;">
+                    <a href="https://www.facebook.com/filo.nabil" target="_blank">
+                        <img src="assets/fb.svg" class="icons">
+                    </a>
+                </div>
+                <div style="display: inline;">
+                    <a href="https://twitter.com/filonabil" target="_blank">
+                        <img src="assets/tweet1.svg" class="icons">
+                    </a>
+                </div>
+                <div style="display: inline;">
+                    <a href="https://github.com/phella" target="_blank">
+                        <img src="assets/github.png" class="icons">
+                    </a>
+                </div>
+                <div style="display: inline;">
+                    <a target="_blank" href="https://www.linkedin.com/in/philopateer-nabil-85a41b169">
+                        <img src="assets/linkdin.svg" class="icons">
+                    </a>
+                </div>
+                <div style="display: inline;">
+                    <a target="_blank" href="https://www.instagram.com/filo_nabil/?hl=en">
+                        <img src="assets/instgram.png" class="icons">
+                    </a>
+                </div>
+            </footer>
         </div>
 
         <!--modal -->
