--- a/main.html
+++ b/main.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="main.css" type="text/css">
+        <link rel="icon" href="assets/icon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            coral
+            Ava Bavely 
         </title>
     </head>
     <body onscroll="scrolling()" style="overflow-x:hidden;">
@@ -172,6 +174,21 @@
 
         <!--modal -->
         <div id="modal" class="modal" onclick="closeModal()">
+        </div>
+
+        <!--spinner-->
+        <div id ="spinner">
+            <Div class="loading">
+                <div class="obj"></div>
+                <div class="obj"></div>
+                <div class="obj"></div>
+                <div class="obj"></div>
+                <div class="obj"></div>
+                <div class="obj"></div>
+            </Div>
+            <div style="    position: absolute;top:60%;left:50%;transform: translate(-50%,-50%);">
+                    Loading AvaBavely ...
+            </div>
         </div>
         <script src="main.js"></script>
     </body>
