translate then rotate bug solved

--- a/main.html
+++ b/main.html
@@ -133,7 +133,7 @@
                     </div>
                 </table>
             </section>
-            <footer style="text-align: center;margin-top:-151px">
+            <footer style="text-align: center;margin-top:-151px;">
                 Like what you see ? &#128521;
                 <br>
                 Then give us a call and we can chat through what you need.
