added scroll up button

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
             Ava Bavely 
         </title>
     </head>
-    <body onscroll="scrolling()" style="overflow-x:hidden;">
+    <body onscroll="scrolling()">
         <nav id="nav">
             <ul>
                     <li>
@@ -190,6 +190,11 @@
                     Loading AvaBavely ...
             </div>
         </div>
+        <button id="up" >
+            <a href="#home">
+                &uarr;
+            </a>
+        </button>
         <script src="main.js"></script>
     </body>
 </html>
